[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/GUI/energy_bar_empty.png" type="Texture" id=1]
[ext_resource path="res://assets/GUI/food_bar_fill_bigger.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/food_bar_empty_bigger.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/energy_bar_fill_deg-rouge-jaune.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Character/GUI.gd" type="Script" id=5]
[ext_resource path="res://assets/Food-Drink/cat-food_color.png" type="Texture" id=6]
[ext_resource path="res://assets/Food-Drink/Health2.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/pauseButton.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/poop_prohibition.png" type="Texture" id=9]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.28579
margin_top = 8.47598
margin_right = 5.28577
margin_bottom = 8.47583
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyTween" type="Tween" parent="."]

[node name="EnergyTweenLow" type="Tween" parent="."]

[node name="FoodTweenLow" type="Tween" parent="."]

[node name="FoodTween" type="Tween" parent="."]

[node name="ButtonControl" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 719.0
mouse_filter = 2

[node name="ButtonPause" type="Button" parent="ButtonControl"]
margin_left = 1750.0
margin_top = 35.0
margin_right = 2274.0
margin_bottom = 553.0
rect_scale = Vector2( 0.231096, 0.231096 )
mouse_default_cursor_shape = 2
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bars" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 719.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyBarArea" type="Node2D" parent="Bars"]
position = Vector2( -22.5585, -23.8467 )
__meta__ = {
"_edit_group_": true
}

[node name="EnergyBar" type="TextureProgress" parent="Bars/EnergyBarArea"]
margin_left = 128.156
margin_top = 58.9226
margin_right = 524.156
margin_bottom = 111.923
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyText" type="TextureRect" parent="Bars/EnergyBarArea"]
margin_left = 50.671
margin_top = 29.9606
margin_right = 562.671
margin_bottom = 541.961
rect_scale = Vector2( 0.158891, 0.158891 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodBarArea" type="Node2D" parent="Bars"]
position = Vector2( -210.591, -24.8142 )
__meta__ = {
"_edit_group_": true
}

[node name="FoodBar" type="TextureProgress" parent="Bars/FoodBarArea"]
margin_left = 317.658
margin_top = 139.537
margin_right = 1341.66
margin_bottom = 193.537
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodText" type="TextureRect" parent="Bars/FoodBarArea"]
margin_left = 242.247
margin_top = 122.63
margin_right = 754.247
margin_bottom = 634.63
rect_scale = Vector2( 0.138641, 0.138641 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoopRestrictedInfo" type="Node2D" parent="Bars"]

[node name="Sprite" type="Sprite" parent="Bars/PoopRestrictedInfo"]
visible = false
position = Vector2( 597.927, 106.808 )
scale = Vector2( 0.205037, 0.205037 )
texture = ExtResource( 9 )
[connection signal="pressed" from="ButtonControl/ButtonPause" to="." method="_on_ButtonPause_pressed"]
